--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,13 @@ body,
     height: 100%;
     margin: 0;
 }
+.grid-container{
+    display: grid;
+    width: 700px;
+    height: 400px;
+    gap: 20px;
+    grid-template: 1fr 200px 1fr /  1fr 1fr;
+}
+.grid-container > div{
+    background: #DAA520;
+}
